--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,9 +19,91 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div>
+        <div class="col-md-1">
+            9:00am
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
     </div>
 
+    <div>
+        <div class="col-md-1">
+            10:00am
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            11:00am
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            12:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            1:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            2:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            3:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            4:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+
+    <div>
+        <div class="col-md-1">
+            5:00pm
+        </div>
+        <textarea class="col-md-10">
+        </textarea>
+        <button class="btn col-md-1"></button>
+    </div>
+    </div>
+
+    <!-- javascript integration -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
