--- a/index.html
+++ b/index.html
@@ -19,86 +19,86 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div>
-        <div class="col-md-1">
+      <div id="nine" class="row time-block">
+        <div class="col-md-1 hour">
             9:00am
         </div>
-        <textarea class="col-md-10">
+        <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+        <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            10:00am
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="ten" class="row time-block">
+          <div class="col-md-1 hour">
+              10:00am
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            11:00am
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="eleven" class="row time-block">
+          <div class="col-md-1 hour">
+              11:00am
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            12:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="twelve" class="row time-block">
+          <div class="col-md-1 hour">
+              12:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            1:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="one" class="row time-block">
+          <div class="col-md-1 hour">
+              1:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            2:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="two" class="row time-block">
+          <div class="col-md-1 hour">
+              2:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            3:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="three" class="row time-block">
+          <div class="col-md-1 hour">
+              3:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            4:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="four" class="row time-block">
+          <div class="col-md-1 hour">
+              4:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
 
-    <div>
-        <div class="col-md-1">
-            5:00pm
-        </div>
-        <textarea class="col-md-10">
-        </textarea>
-        <button class="btn col-md-1"></button>
-    </div>
+      <div id="five" class="row time-block">
+          <div class="col-md-1 hour">
+              5:00pm
+          </div>
+          <textarea class="col-md-10 description">
+          </textarea>
+          <button class="btn saveBtn col-md-1"></button>
+      </div>
     </div>
 
     <!-- javascript integration -->
