beginning script for current date

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
         </div>
         <textarea class="col-md-10 description">
         </textarea>
-        <button class="btn saveBtn col-md-1"></button>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="ten" class="row time-block">
-          <div class="col-md-1 hour">
-              10:00am
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+        <div class="col-md-1 hour">
+            10:00am
+        </div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
       </div>
 
       <div id="eleven" class="row time-block">
@@ -43,7 +45,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="twelve" class="row time-block">
@@ -52,7 +56,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="one" class="row time-block">
@@ -61,7 +67,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="two" class="row time-block">
@@ -70,7 +78,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="three" class="row time-block">
@@ -79,7 +89,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="four" class="row time-block">
@@ -88,7 +100,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
 
       <div id="five" class="row time-block">
@@ -97,7 +111,9 @@
           </div>
           <textarea class="col-md-10 description">
           </textarea>
-          <button class="btn saveBtn col-md-1"></button>
+          <button class="btn saveBtn col-md-1">
+            <i class="fas fa-save"></i>
+          </button>
       </div>
     </div>
 
