--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div class="col-md-1 hour">
             9:00am
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
@@ -32,94 +31,72 @@
         <div class="col-md-1 hour">
             10:00am
         </div>
-        <textarea class="col-md-10 description">
-        </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="eleven" class="row time-block">
-          <div class="col-md-1 hour">
-              11:00am
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            11:00am
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="twelve" class="row time-block">
-          <div class="col-md-1 hour">
-              12:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            12:00pm
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="one" class="row time-block">
-          <div class="col-md-1 hour">
-              1:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            1:00pm
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="two" class="row time-block">
-          <div class="col-md-1 hour">
-              2:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            2:00pm
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="three" class="row time-block">
-          <div class="col-md-1 hour">
-              3:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            3:00pm
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="four" class="row time-block">
-          <div class="col-md-1 hour">
-              4:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            4:00pm
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
       <div id="five" class="row time-block">
-          <div class="col-md-1 hour">
-              5:00pm
-          </div>
-          <textarea class="col-md-10 description">
-          </textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+        <div class="col-md-1 hour">
+            5:00pm
+        </div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
     <!-- javascript integration -->
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="script.js"></script>
+   
   </body>
 </html>
